After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 680479 - [0.11] typefind: gst_adapter_map: assertion `size > 0' failed
[0.11] typefind: gst_adapter_map: assertion `size > 0' failed
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
0.11.x
Other Linux
: Normal normal
: 0.11.x
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-07-23 19:42 UTC by Tim-Philipp Müller
Modified: 2012-07-24 10:44 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Tim-Philipp Müller 2012-07-23 19:42:47 UTC
^C
tpm@zingle:~/gst/0.11/gst-plugins-base/tests/examples/playback$ G_DEBUG=fatal_warnings gdb --args ./.libs/lt-playback-test 0 'http://croworld.ca:8000/'
GNU gdb (GDB) 7.4.1-debian
Copyright (C) 2012 Free Software Foundation, Inc.
License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>
This is free software: you are free to change and redistribute it.
There is NO WARRANTY, to the extent permitted by law.  Type "show copying"
and "show warranty" for details.
This GDB was configured as "x86_64-linux-gnu".
For bug reporting instructions, please see:
<http://www.gnu.org/software/gdb/bugs/>...
Reading symbols from /home/tpm/gst/0.11/gst-plugins-base/tests/examples/playback/.libs/lt-playback-test...done.
(gdb) run
Starting program: /home/tpm/gst/0.11/gst-plugins-base/tests/examples/playback/.libs/lt-playback-test 0 http://croworld.ca:8000/
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
Setting URI: http://croworld.ca:8000/
Setting URI: (null)
Window realize: video window XID = 44040203
PLAY pipeline
[New Thread 0x7fffe61d9700 (LWP 14529)]
[New Thread 0x7fffe59d8700 (LWP 14530)]
[New Thread 0x7fffe51d7700 (LWP 14531)]
[New Thread 0x7fffe49d6700 (LWP 14532)]
message from "source" (error): GstMessageError, gerror=(GError)NULL, debug=(string)"gstsouphttpsrc.c\(856\):\ gst_soup_http_src_finished_cb\ \(\):\ /GstPlayBin:playbin/GstURIDecodeBin:uridecodebin0/GstSoupHTTPSrc:source:\012libsoup\ status\ code\ 4";
message from "source" (error): GstMessageError, gerror=(GError)NULL, debug=(string)"gstsouphttpsrc.c\(1027\):\ gst_soup_http_src_parse_status\ \(\):\ /GstPlayBin:playbin/GstURIDecodeBin:uridecodebin0/GstSoupHTTPSrc:source:\012Cannot\ connect\ to\ destination\ \(croworld.ca\)\ \(4\)\,\ URL:\ http://croworld.ca:8000/";

** (lt-playback-test:14526): CRITICAL **: gst_adapter_map: assertion `size > 0' failed
message from "source" (error): GstMessageError, gerror=(GError)NULL, debug=(string)"gstbasesrc.c\(2742\):\ gst_base_src_loop\ \(\):\ /GstPlayBin:playbin/GstURIDecodeBin:uridecodebin0/GstSoupHTTPSrc:source:\012streaming\ task\ paused\,\ reason\ error\ \(-5\)";

Program received signal SIGTRAP, Trace/breakpoint trap.

Thread 140737045694208 (LWP 14530)

  • #0 g_logv
    at /tmp/buildd/glib2.0-2.32.3/./glib/gmessages.h line 101
  • #1 g_log
    at /tmp/buildd/glib2.0-2.32.3/./glib/gmessages.c line 792
  • #2 g_return_if_fail_warning
    at /tmp/buildd/glib2.0-2.32.3/./glib/gmessages.c line 801
  • #3 gst_adapter_map
    at gstadapter.c line 441
  • #4 gst_type_find_element_chain_do_typefinding
    at gsttypefindelement.c line 875
  • #5 gst_type_find_element_sink_event
    at gsttypefindelement.c line 628
  • #6 gst_pad_send_event_unchecked
    at gstpad.c line 4745
  • #7 gst_pad_push_event_unchecked
    at gstpad.c line 4440
  • #8 push_sticky
    at gstpad.c line 3231
  • #9 events_foreach
    at gstpad.c line 514
  • #10 check_sticky
    at gstpad.c line 3270
  • #11 gst_pad_push_event
    at gstpad.c line 4563
  • #12 gst_base_src_loop
    at gstbasesrc.c line 2743
  • #13 gst_task_func
    at gsttask.c line 316
  • #14 g_thread_pool_thread_proxy
    at /tmp/buildd/glib2.0-2.32.3/./glib/gthreadpool.c line 309
  • #15 g_thread_proxy
    at /tmp/buildd/glib2.0-2.32.3/./glib/gthread.c line 801
  • #16 start_thread
    at pthread_create.c line 304
  • #17 clone
    at ../sysdeps/unix/sysv/linux/x86_64/clone.S line 112
  • #18 ??

Comment 1 Wim Taymans 2012-07-24 10:44:22 UTC
commit a1f1bbd36360f785dea20391c08d5fad55e1c823
Author: Wim Taymans <wim.taymans@collabora.co.uk>
Date:   Tue Jul 24 12:38:15 2012 +0200

    typefind: require bytes before typefinding
    
    Require that we have some bytes in the adapter before we attempt to typefind.
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=680479